# psiformer_torch

./: .gitignore  PsiFormer.md  README.md  computation_graph  config.py  error.txt  helium_landscape.py  main.fls  main.py  pyproject.toml  state_of_the_art_chatgtp2.py  train.sh  utils.py
.cursor/rules/: rule_latex.mdc
assets/: error.txt  main_es.tex
assets/beamer/: main.tex  main.vrb  main_2.tex  main_2.vrb
assets/plots/: hyperparemeters.tex  table.tex
assets/research/: main.tex  main_es.tex
assets/train_wandb/: helium.csv  hidrogen.csv
assets/train_wandb_csv/: berilium.csv  hidrogen_cuda.csv  lithium.csv
assets/unt/: ART01.tex  ART5.7512-Laredo 2.tex  psiformer_article.tex  psiformer_article_deprecated.tex  psiformer_article_sent.tex  psiformer_middle_ver.tex  update.md
assets/unt/Base/: Paquetes.tex  Selecciones.cls  selec10.clo
assets/unt/Base/IMG/: 88x31.eps  indice1.eps
checkpoints/: Litium.pth  helium_with_envelope.pth  helium_with_envelope_expressive.pth  last_checkpoint.pth  last_checkpoint_1.pth
research/: Development.md  main.aux  main.fdb_latexmk  main.tex
src/: PsiFormer_Torch Documentation.md  main.py
src/psiformer_torch/: __init__.py  backwards.py  backwards_strong.py  config.py  dev.py  eval.py  hamiltonian.py  jastrow.py  logdet_matmul.py  mcmc.py  metrics.py  psiformer.py  reverse_mode.py  tf.py  train.py  utils.py
src/psiformer_torch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/psiformer_torch/eval/: eval.py
src/psiformer_torch/personalized_op/: backwards.py  backwards_strong.py
src/psiformer_torch/tests/: lapla.py  laplacian_test.py  local_energy_test.py  logdet_matmul_stability_test.py  logdet_test.py  main.py  matrix.ipynb  mc_test.py  metropolis_hasting_test.py  past.py  second_derivative_test copy.py  second_derivative_test.py  test.py  train_wrapper_test.py  wad.py
src/psiformer_torch/utils/: EVAL.py  METRICS.py  UPLOAD_HF.py  ploter.py
tests/: forward_diff.py  jax_test.py  torch_test.py
utils/: count_params.py  generate_paper_plot.py  helium_landscape.py  plot_convergence_fast_large.py
