[project]
name = "psiformer-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pytest>=9.0.2",
    "torchviz>=0.0.3",
    "wandb>=0.23.0",
]

[dependency-groups]
# On the GPU box: install this group to get CUDA PyTorch
cuda = [
    "torch>=2.9.1",
]

# You can keep this, but right now it's identical to `cuda`.
# If later you want a CPU-only build for laptop, we’d point it to a CPU index instead.
laptop = [
    "torch>=2.9.1",
]


# CUDA 12.8 wheels from the official PyTorch index
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# Force torch to be resolved from the CUDA 12.8 index
torch = [
  { index = "pytorch-cu128" },
]
